2010-09-12 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.37
	* Created password protected preferences dialog - nothing on it yet except the password
	* added MD5 function to return a hex string digest for a string

2010-09-11 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.36
	* added settings to restore IDE and help to size and location when re-opened
	* added list of 9 most recently opened or saved items for quick open on file menu

2010-09-08 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.35
	* Added NETADDRESS to return the local IPv4 address as a string

2010-09-06 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.34
	* Added kill statement to delete a file from the file system

2010-08-22 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.33
	* fixed problem with focus effecting "key" statement - if focus was ever lost from
	- graphics window - key statement would stop working.  added key trap to BasicOutput
	- and logic to allow BasicGraph to regain focus
	* syntax highliter updated for a few misses commands

2010-08-16 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.31
	* fixed linux to compile again after changes in 0.9.6.30
	* removed most of the errors from LEX/basicParse.y 

2010-08-16 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.30
	* changed all tokens to B256... in lex folder to stop conflicts with windows wtypes.h
	* work on porting to winsock (Windows) - have functioning well enough to test
	* changed net commands to act like file io commands and allow up to 8 open
	- sockets 0-7 with 0 being the default.
	
2010-08-15 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.29
	* cleaned up socket release (close)
	* added NETDATA function to return true if data is waiting to be received

2010-08-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.28
	* added first attempt at networking statements
        - statements NETLISTEN, NETCONNECT, NETREAD, NETOPEN, and NETCLOSE
	* added new networking folder to Examples with a few test programs